--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node Server Testing Challenge",
   "main": "server.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "commit": "cz"
   },
   "jest": {
     "testEnvironment": "node"
@@ -22,7 +23,8 @@
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
   "devDependencies": {
     "jest": "^24.9.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "commitizen": "^4.2.1"
   },
   "dependencies": {
     "express": "^4.17.1",
