--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "jest --watch",
-    "commit": "cz"
+    "commit": "cz",
+    "server": "nodemon index.js"
   },
   "jest": {
     "testEnvironment": "node"
@@ -22,9 +23,11 @@
   },
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
   "devDependencies": {
+    "commitizen": "^4.2.1",
+    "cross-env": "^7.0.2",
     "jest": "^24.9.0",
-    "supertest": "^4.0.2",
-    "commitizen": "^4.2.1"
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "express": "^4.17.1",
